Add Bivariate NB model

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: XQTL
 Type: Package
 Title: Analysis of chrX.
-Version: 0.1.0
+Version: 0.1.1
 Author: Renan Sauteraud
 Maintainer: Renan Sauteraud <renan.sauteraud@gmail.com>
 Description: New model for analysis of chr X.
@@ -9,5 +9,6 @@ License: GPL-2
 Encoding: UTF-8
 LazyData: true
 Import:
-  mvtnorm
+  mvtnorm,
+  RMKdiscrete
 RoxygenNote: 7.1.0
