--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,14 @@
 export(loglM2)
 export(loglM2H0_xa)
 export(loglM2H0_xi)
+export(loglM2NB)
+export(loglM2NBH0)
+export(loglM2P)
 export(loglM3)
 export(loglM3H0_xi)
 export(loglM4)
 export(loglM4H0_xi)
 export(loglM5)
 export(loglM5H0_esc)
+importFrom(RMKdiscrete,dbinegbin)
 importFrom(mvtnorm,dmvnorm)
